tests/baselines/reference/YieldExpression13_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression13_es6.ts(1,9): error TS1218: Generators are only available when targeting ECMAScript 6 or higher.


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression13_es6.ts (1 errors) ====
    function* foo() { yield }
            ~
!!! error TS1218: Generators are only available when targeting ECMAScript 6 or higher.